[package]
name = "converter"
version = "0.1.0"
authors = ["Anand Prem <anandprem333@gmail.com>"]
edition = "2018"
description = "Converts the base64 format data to PDF/PNG"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
base64 = "0.13.0"
